# noxis-engineer

./: .gitignore  []  pyproject.toml
docs/: ARCTECTURE.md  MVP_SCOPE.md  PLUGIN_INTERFACE.md  PROJECT_STRUCTURE.md
noxis/: __main__.py
noxis/ai/: context_builder.py  history.py  provider.py
noxis/cli/: main.py
noxis/context/: discovery.py  loader.py  model.py
noxis/core/: orchestrator.py  project_state.py  results.py  workspace.py
noxis/plugins/: base.py  manager.py
noxis/plugins/python/: plugin.py
noxis/policies/: __init__.py  defaults.yml  loader.py
noxis/services/: ai_explain_service.py  ai_tests_service.py  doctor_service.py  init_service.py  scan_service.py
noxis/services/ai_tests/: __init__.py  prompt_builder.py  pytest_runner.py  service.py  source_discovery.py  writer.py
noxis/storage/: memory.py
tests/: test_smoke.py
